--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <div class="layout-principal">
     <div class="bloque">
       <!-- 4º Commit - Tu presentación -->
-      <h3>¡Hola! Bienvenido GIT /,,/,</h3>
+      <h3>¡Hola! Bienvenido GIT /,,/, Metal metal metal</h3>
       <p>Tu descripción</p>
     </div>
 
