linea experimental cambio estilos

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="bloque">
       <!-- 5º Commit - Tu portafolio -->
       <h3>Mi portafolio y redes</h3>
-      <a href="#"><p>Direccion de tu sitio</p></a>
+      <a href="#"><p>Direccion de tu fucking home</p></a>
       <a href="#"><p>Lugar de tu sitio</p></a>
       <a href="#"><p>Nombre de tu sitio</p></a>
       <a href="#"><p>Nombre de tu sitio</p></a>
