--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
          <!-- 1º Commit Tu nombre y foto -->
         <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRKdV1rrbA_5PtklIncNxfnbW1ZLTqZUhx553BafxPuIcmPL2jU">
         <h1 class="sidebar_information_title">
-          Escribe tu nombre
+          Juan Carlos Lores
         </h1>
       </div>
       <div class="comunidad-autoria">
@@ -80,7 +80,7 @@
       <!-- 5º Commit - Tu portafolio -->
       <h3>Mi portafolio y redes</h3>
       <a href="#"><p>Direccion de tu fucking home</p></a>
-      <a href="#"><p>Lugar de tu sitio</p></a>
+      <a href="#"><p>Mi fabook</p></a>
       <a href="#"><p>Nombre de tu sitio</p></a>
       <a href="#"><p>Nombre de tu sitio</p></a>
     </div>
