--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
          <!-- 1º Commit Tu nombre y foto -->
         <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRKdV1rrbA_5PtklIncNxfnbW1ZLTqZUhx553BafxPuIcmPL2jU">
         <h1 class="sidebar_information_title">
-          Escribe tu nombre
+          juankrlos3c
         </h1>
       </div>
       <div class="comunidad-autoria">
