cambio en el cuerpo de la pagina

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="bloque">
       <!-- 4º Commit - Tu presentación -->
       <h3>¡Hola! Bienvenido GIT /,,/, Metal metal metal</h3>
-      <p>Tu descripción</p>
+      <p>Descripcion para revisar los detalles del trabajo</p>
     </div>
 
     <div class="bloque">
